Done resolving errors on the mplementation of  all Momo Splitwise core features

--- a/momo_splitwise/index.html
+++ b/momo_splitwise/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Momo Splitwise - Split bills, keep friends</title>
-    <meta name="description" content="Track shared expenses and split costs fairly using mobile money in Africa">
+    <meta name="description" content="The smart way to split expenses with friends, roommates, and groups across Africa. Track shared costs, calculate debts, and settle payments seamlessly with mobile money integration.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
